--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 description: A Helm chart for Kubernetes
-name: common
+name: core-k8s-tools
 version: 1.0.0
 dependencies:
 #  - name: minio-operator
