--- a/Chart.yaml
+++ b/Chart.yaml
@@ -2,13 +2,21 @@ apiVersion: v2
 description: A Helm chart for Kubernetes
 name: core-k8s-tools
 version: 1.0.0
+appVersion: 1.0.0
 dependencies:
-#  - name: minio-operator
-#    repository: file://subcharts/minio-operator
-#    version: 4.3.7
   - name: cilium
     repository: file://subcharts/cilium/1.15.4
     version: 1.15.4
+    condition: cilium.enabled
+  - name: karpenter
+    repository: file://subcharts/karpenter/0.1.0
+    version: 0.1.0
+    condition: karpenter.enabled
   - name: keda
-    repository: file://subcharts/keda/2.13.1
-    version: 2.13.1
+    repository: file://subcharts/keda/2.13.2
+    version: 2.13.2
+    condition: keda.enabled
+  - name: minio-operator
+    repository: file://subcharts/minio-operator/4.3.7
+    version: 4.3.7
+    condition: minio-operator.enabled
