--- a/values.yaml
+++ b/values.yaml
@@ -1,9 +1,23 @@
 cilium:
-  enabled: true
+  enabled: false
   Namespace: kube-system
   aksbyocni:
     enabled: true
   nodeinit:
+    enabled: true
+
+ingress-azure:
+  enabled: true
+  Namespace: kube-system
+  appgw:
+    environment: AZUREPUBLICCLOUD
+    subscriptionId: 15e39dd4-0677-4bcd-bb45-d2deb5edda40
+    resourceGroup: dev-akspoc-rapyder
+    name: dev-akspoc-rapyder
+  armAuth:
+    type: workloadIdentity
+    identityClientID: "3dfe02ad-9e42-48f3-96b5-03c5b601da67"
+  rbac:
     enabled: true
 
 karpenter:
@@ -11,8 +25,8 @@ karpenter:
   Namespace: kube-system
   settings:
     azure:
-      clusterName: "dev-akspoc-rapyder"
-      clusterEndpoint: "https://dev-akspoc-rapyder-zonndpko.hcp.eastus.azmk8s.io:443"
+      clusterName: ""
+      clusterEndpoint: ""
   serviceAccount:
     name: karpenter-sa
     annotations:
@@ -32,4 +46,4 @@ keda:
 
 minio-operator:
   enabled: false
-#  Namespace: minio-operator
+  Namespace: minio-operator
